Update HTML structure and add recipe generation functionality

--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>test</title>
+    <title>Générateur de Recettes AI - Accueil</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>waaah waaah way way</h1>
+    <div class="container home-container">
+      <header>
+        <h1>🍳 Bienvenue dans votre cuisine intelligente</h1>
+        <p class="subtitle">
+          Transformez vos ingrédients disponibles en délicieuses recettes
+          personnalisées grâce à l'IA.
+        </p>
+      </header>
+
+      <main class="hero">
+        <div class="features">
+          <div class="feature">
+            <div class="feature-icon">🥕</div>
+            <h3>Ingrédients disponibles</h3>
+            <p>Utilisez ce que vous avez déjà dans votre frigo et placards.</p>
+          </div>
+          <div class="feature">
+            <div class="feature-icon">⏱️</div>
+            <h3>Temps contrôlé</h3>
+            <p>Définissez votre temps maximum de préparation.</p>
+          </div>
+          <div class="feature">
+            <div class="feature-icon">🤖</div>
+            <h3>IA créative</h3>
+            <p>Des recettes uniques générées par intelligence artificielle.</p>
+          </div>
+        </div>
+
+        <div class="cta-section">
+          <a href="select.html" class="cta-button">
+            🚀 Commencer l'expérience
+          </a>
+          <p class="cta-note">C'est gratuit et sans inscription !</p>
+        </div>
+      </main>
+
+      <footer>
+        <p>© 2024 Générateur de Recettes AI - Projet étudiant</p>
+      </footer>
+    </div>
+
+    <script src="home.js"></script>
   </body>
 </html>
