Login & Fastfood API

--- a/recipe_backend/public/Front/history/index.html
+++ b/recipe_backend/public/Front/history/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Historique des recettes</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body class="app-body">
     <header class="app-header">
