Update login and signup forms to use 'username' instead of 'email'

--- a/recipe_backend/public/Front/login.html
+++ b/recipe_backend/public/Front/login.html
@@ -15,12 +15,12 @@
 
         <form id="loginForm" onsubmit="return handleLogin(event)">
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="username">Email</label>
             <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="votre@email.com"
+              type="username"
+              id="username"
+              name="username"
+              placeholder="exemple"
               required
             />
           </div>
