--- a/recipe_backend/public/Front/signup.html
+++ b/recipe_backend/public/Front/signup.html
@@ -28,12 +28,12 @@
           </div>
 
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="username">Username</label>
             <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="votre@email.com"
+              type="username"
+              id="username"
+              name="username"
+              placeholder="exemple"
               required
             />
           </div>
