puts HTML files in folders

--- a/recipe_backend/public/Front/ingredients/index.html
+++ b/recipe_backend/public/Front/ingredients/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Choisissez vos ingrédients</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body class="app-body">
     <header class="app-header">
@@ -12,9 +12,9 @@
         <span class="logo-text">Ma Cuisine</span>
       </div>
       <div class="header-actions">
-        <a href="index.html" class="header-link">Accueil</a>
-        <a href="history.html" class="header-link">Historique</a>
-        <a href="login.html" class="header-link">Mon compte</a>
+        <a href="../landing/index.html" class="header-link">Accueil</a>
+        <a href="../history/index.html" class="header-link">Historique</a>
+        <a href="../login/index.html" class="header-link">Mon compte</a>
       </div>
     </header>
 
