--- a/recipe_backend/public/Front/landing/index.html
+++ b/recipe_backend/public/Front/landing/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Bienvenue dans votre cuisine</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body class="app-body landing-page">
     <!-- Barre du haut, réutilisable -->
@@ -13,8 +13,8 @@
         <span class="logo-text">Ma Cuisine</span>
       </div>
       <div class="header-actions">
-        <a href="login.html" class="header-link">Connexion</a>
-        <a href="signup.html" class="header-link">Inscription</a>
+        <a href="../login/index.html" class="header-link">Connexion</a>
+        <a href="../signup/index.html" class="header-link">Inscription</a>
       </div>
     </header>
 
@@ -35,7 +35,7 @@
         <div class="cta-row">
           <button
             class="cta-btn"
-            onclick="window.location.href='ingredients.html'"
+            onclick="window.location.href='../ingredients/index.html'"
           >
             <span>Se lancer</span>
             <span class="cta-btn-icon">➜</span>
@@ -43,7 +43,7 @@
 
           <button
             class="ghost-btn"
-            onclick="window.location.href='signup.html'"
+            onclick="window.location.href='../signup/index.html'"
           >
             Créer un compte
           </button>
@@ -80,6 +80,6 @@
       <span>© 2025 Ma Cuisine · Projet web</span>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
