--- a/recipe_backend/public/Front/login/index.html
+++ b/recipe_backend/public/Front/login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connexion</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <div class="auth-container">
@@ -15,7 +15,7 @@
 
         <form id="loginForm" onsubmit="return handleLogin(event)">
           <div class="form-group">
-            <label for="username">Email</label>
+            <label for="username">username</label>
             <input
               type="username"
               id="username"
@@ -42,7 +42,7 @@
         </form>
 
         <div class="auth-footer">
-          <p>Pas encore de compte ? <a href="signup.html">S'inscrire</a></p>
+          <p>Pas encore de compte ? <a href="../signup/index.html">S'inscrire</a></p>
         </div>
       </div>
     </div>
