--- a/recipe_backend/public/Front/signup/index.html
+++ b/recipe_backend/public/Front/signup/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inscription</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <div class="auth-container">
@@ -66,11 +66,11 @@
         </form>
 
         <div class="auth-footer">
-          <p>Déjà un compte ? <a href="login.html">Se connecter</a></p>
+          <p>Déjà un compte ? <a href="../login/index.html">Se connecter</a></p>
         </div>
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
