--- a/public/ingredients/index.html
+++ b/public/ingredients/index.html
@@ -105,6 +105,6 @@
       </aside>
     </main>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
