--- a/public/login/index.html
+++ b/public/login/index.html
@@ -42,11 +42,13 @@
         </form>
 
         <div class="auth-footer">
-          <p>Pas encore de compte ? <a href="../signup/index.html">S'inscrire</a></p>
+          <p>
+            Pas encore de compte ? <a href="../signup/index.html">S'inscrire</a>
+          </p>
         </div>
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
