--- a/public/recipe/index.html
+++ b/public/recipe/index.html
@@ -48,6 +48,6 @@
       </aside>
     </main>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
